# swagger.json
@@ -21,23 +21,20 @@
     },
     "/users/": {
       "get": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint to get all users",
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "post": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint for creating a new user",
         "parameters": [
           {
@@ -61,17 +58,19 @@
                   "example": "joe.bobson@gmail.com"
                 }
               },
-              "required": [
-                "firstName",
-                "lastName",
-                "email"
-              ]
+              "required": ["firstName", "lastName", "email"]
             }
           }
         ],
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
@@ -81,13 +80,9 @@
     },
     "/users/{id}": {
       "get": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint to get a single user by id",
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "parameters": [
           {
             "name": "id",
@@ -102,13 +97,14 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "put": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint for updating a user",
         "parameters": [
           {
@@ -138,11 +134,7 @@
                   "example": "jane.doe@gmail.com"
                 }
               },
-              "required": [
-                "firstName",
-                "lastName",
-                "email"
-              ]
+              "required": ["firstName", "lastName", "email"]
             }
           }
         ],
@@ -150,15 +142,19 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "delete": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint for deleting a user",
         "parameters": [
           {
@@ -180,23 +176,20 @@
     },
     "/goals/": {
       "get": {
-        "tags": [
-          "Goals"
-        ],
+        "tags": ["Goals"],
         "description": "Endpoint to get all goals",
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "post": {
-        "tags": [
-          "Goals"
-        ],
+        "tags": ["Goals"],
         "description": "Endpoint to create a goal",
         "parameters": [
           {
@@ -252,6 +245,12 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -260,13 +259,9 @@
     },
     "/goals/{id}": {
       "get": {
-        "tags": [
-          "Goals"
-        ],
+        "tags": ["Goals"],
         "description": "Endpoint to get a single goal",
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "parameters": [
           {
             "name": "id",
@@ -281,13 +276,14 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "put": {
-        "tags": [
-          "Goals"
-        ],
+        "tags": ["Goals"],
         "description": "Endpoint to update a goal",
         "parameters": [
           {
@@ -349,15 +345,19 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "delete": {
-        "tags": [
-          "Goals"
-        ],
+        "tags": ["Goals"],
         "description": "Endpoint to delete a goal",
         "parameters": [
           {
@@ -379,23 +379,20 @@
     },
     "/comments/": {
       "get": {
-        "tags": [
-          "Comments"
-        ],
+        "tags": ["Comments"],
         "description": "Endpoint to get all comments",
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "post": {
-        "tags": [
-          "Comments"
-        ],
+        "tags": ["Comments"],
         "description": "Endpoint for creating a new comment",
         "parameters": [
           {
@@ -423,18 +420,19 @@
                   "example": "10/13/2023"
                 }
               },
-              "required": [
-                "userId",
-                "goalId",
-                "text",
-                "createdAt"
-              ]
+              "required": ["userId", "goalId", "text", "createdAt"]
             }
           }
         ],
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
@@ -444,13 +442,9 @@
     },
     "/comments/{id}": {
       "get": {
-        "tags": [
-          "Comments"
-        ],
+        "tags": ["Comments"],
         "description": "Endpoint to get a single comment",
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "parameters": [
           {
             "name": "id",
@@ -465,13 +459,14 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "put": {
-        "tags": [
-          "Comments"
-        ],
+        "tags": ["Comments"],
         "description": "Endpoint for updating a comment",
         "parameters": [
           {
@@ -505,12 +500,7 @@
                   "example": "10/13/2023"
                 }
               },
-              "required": [
-                "userId",
-                "goalId",
-                "text",
-                "createdAt"
-              ]
+              "required": ["userId", "goalId", "text", "createdAt"]
             }
           }
         ],
@@ -518,15 +508,19 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "delete": {
-        "tags": [
-          "Comments"
-        ],
+        "tags": ["Comments"],
         "description": "Endpoint for deleting a comment",
         "parameters": [
           {
@@ -548,23 +542,20 @@
     },
     "/categories/": {
       "get": {
-        "tags": [
-          "Categories"
-        ],
+        "tags": ["Categories"],
         "description": "Endpoint to get all categories",
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "post": {
-        "tags": [
-          "Categories"
-        ],
+        "tags": ["Categories"],
         "description": "Endpoint for creating a new category",
         "parameters": [
           {
@@ -584,16 +575,19 @@
                   "example": "School"
                 }
               },
-              "required": [
-                "userId",
-                "categoryName"
-              ]
+              "required": ["userId", "categoryName"]
             }
           }
         ],
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
@@ -603,13 +597,9 @@
     },
     "/categories/{id}": {
       "get": {
-        "tags": [
-          "Categories"
-        ],
+        "tags": ["Categories"],
         "description": "Endpoint to get a single category",
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "parameters": [
           {
             "name": "id",
@@ -624,13 +614,14 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "put": {
-        "tags": [
-          "Categories"
-        ],
+        "tags": ["Categories"],
         "description": "Endpoint for updating a category",
         "parameters": [
           {
@@ -656,10 +647,7 @@
                   "example": "School"
                 }
               },
-              "required": [
-                "userId",
-                "categoryName"
-              ]
+              "required": ["userId", "categoryName"]
             }
           }
         ],
@@ -667,15 +655,19 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "delete": {
-        "tags": [
-          "Categories"
-        ],
+        "tags": ["Categories"],
         "description": "Endpoint for deleting a category",
         "parameters": [
           {
